fix brand alignment

--- a/src/app/core/components/toolbar/toolbar.component.scss
+++ b/src/app/core/components/toolbar/toolbar.component.scss
@@ -66,6 +66,9 @@
 			background: transparent;  /* optional: just make scrollbar invisible */
 		}
 	}
+	.navbar-brand {
+		padding-bottom: 0px;
+	}
 	.navbar-nav {
 		flex-direction: row;
 		overflow-x: auto;
